1. Sponsor Section shifted 2. button color inverted 3. bugs fixed

--- a/styles.css
+++ b/styles.css
@@ -4727,11 +4727,11 @@ figcaption {
 	-ms-flex: 0 0 auto;
 	flex: 0 0 auto;
 	border-radius: 100px;
-	background-color: #f36d97;
-	box-shadow: inset 0 0 0 2px #f36d97;
+	background-color: #ffbd52;
+	box-shadow: inset 0 0 0 2px #ffbd52;
 	-webkit-transition: background-color 200ms ease;
 	transition: background-color 200ms ease;
-	color: #fff;
+	color: #000;
 	font-size: 16px;
 	font-weight: 500;
 	text-align: center;
@@ -4740,9 +4740,9 @@ figcaption {
 }
 
 .button:hover {
-	background-color: #f36d97;
+	background-color: #ffbd52 !important;
 	box-shadow: none;
-	color: #fff;
+	color: #000 !important;
 }
 
 .button.outline {
@@ -4961,9 +4961,9 @@ figcaption {
 }
 
 .button-tab.w--current {
-	background-color: #f36d97;
+	background-color: #ffbd52;
 	box-shadow: none;
-	color: #fff;
+	color: #000  !important;
 }
 
 .box-wrapper {
@@ -8063,7 +8063,7 @@ figcaption {
 	-ms-flex-align: center;
 	align-items: center;
 	border-radius: 100px;
-	background-color: #f1ad2e;
+	background-color: #f36d97 !important;
 }
 
 .heading-xlarge-hero {
@@ -8609,7 +8609,7 @@ figcaption {
 	width: 100%;
 	height: 100%;
 	border-radius: 100px;
-	background-color: #ffbd52;
+	background-color: #f36d97;
 }
 
 .m-button-label {
